@@ -1543,6 +1543,7 @@ Michael Hornok <Michael.Hornok@alcatel.com>
 W.M. van den Boogaard <wim.vd.boogaard@meco.nl>
 Carol Hunsicker <carol.hunsicker@lmco.com>
 Joseph Sarbak <joseph_t_sarbak@hotmail.com>
+Ruslan Zasukhin <sunshine@public.kherson.ua>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
